# chat-assistant

./: .gitignore  README.md  environment.yml  pyproject.toml
app/: main.py  utils.py
app/assets/: style.css
app/config/: .env.example  default.cfg  local.cfg  production.cfg
app/data/: prompts.csv
app/layout_files/: layout.py  main_window.py  sidebar.py
