[tool.poetry]
name = "simple-chat"
version = "0.1.0"
description = "Env for openai dash app"
authors = ["Jason Price <jpr@novozymes.com>"]

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.8.1"
dash-mantine-components = "^0.12.0"
dash-bootstrap-components = "^1.4.0"
pandas = "^1.5.3" 
sqlalchemy = "^1.3.20"
plotly = "^5.3.1"
openai = "*"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
